--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,7 +3,7 @@ uvicorn[standard]==0.30.6
 pydantic==2.8.2
 SQLAlchemy==2.0.34
 aiosqlite==0.20.0
-greenlet==3.0.3
+greenlet>=3.1.0,<4
 jinja2==3.1.4
 reportlab==4.2.2
 httpx==0.27.2
